infra/dev/sts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sts
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: s1dequest/scanthisspace:dev
        name: sts
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1.0"
            memory: "1G"
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
