infra/dev/sts-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: frontend
  name: sts
  namespace: default
spec:
  selector:
    app: frontend
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
