infra/dev/ingress.yaml

apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: sts
          servicePort: 8080
